@@ -9,3 +9,4 @@
 /t?-other
 /t?-proc
 /t?-string
+/t?-time
