@@ -9,7 +9,7 @@ lib_LTLIBRARIES  = libHX.la
 libHX_la_SOURCES = arbtree.c deque.c dir.c dl.c format.c mc.c misc.c opt.c \
                    rand.c string.c ${mingw32_extra} ${proc_sources}
 libHX_la_LIBADD  = ${regular_LIBS}
-libHX_la_LDFLAGS = -version-info 21:0:3
+libHX_la_LDFLAGS = -version-info 22:0:4
 
 if MINGW32
 mingw32_extra    = ux-file.c ux-mmap.c
@@ -19,7 +19,7 @@ proc_sources     = proc.c
 endif
 
 noinst_PROGRAMS    = tc-compile tc-arbtree tc-cast tc-deque tc-dir tc-list \
-                     tc-misc tc-option tc-proc tc-string
+                     tc-misc tc-option tc-proc tc-string tc-time
 tc_arbtree_LDADD   = libHX.la -lm
 tc_cast_LDADD      = -lm
 tc_compile_LDADD   = libHX.la
@@ -29,10 +29,11 @@ tc_misc_LDADD      = libHX.la
 tc_option_LDADD    = libHX.la
 tc_proc_LDADD      = libHX.la
 tc_string_LDADD    = libHX.la
+tc_time_LDADD      = libHX.la -lrt
 
 if HAVE_CXX
 noinst_PROGRAMS   += tx-compile tx-arbtree tx-cast tx-deque tx-dir tx-list \
-                     tx-misc tx-option tx-proc tx-string
+                     tx-misc tx-option tx-proc tx-string tx-time
 tx_arbtree_SOURCES = tx-arbtree.cpp
 tx_arbtree_LDADD   = libHX.la -lm
 tx_cast_SOURCES    = tx-cast.cpp
@@ -51,4 +52,6 @@ tx_proc_SOURCES    = tx-proc.cpp
 tx_proc_LDADD      = libHX.la
 tx_string_SOURCES  = tx-string.cpp
 tx_string_LDADD    = libHX.la
+tx_time_SOURCES    = tx-time.cpp
+tx_time_LDADD      = libHX.la -lrt
 endif
